--- a/clients/owner-client/src/app/employee/_layouts/account/account-details/account-details.component.html
+++ b/clients/owner-client/src/app/employee/_layouts/account/account-details/account-details.component.html
@@ -8,58 +8,58 @@
     <div class="info-wrapper">
         <div class="table">
             <div class="row">
-                <div>Username</div>
+                <div>{{ 'username' | translate | titlecase }}</div>
                 <div>{{ account.username }}</div>
             </div>
             <mat-divider class="divider"></mat-divider>
             <div class="row">
-                <div>First Name</div>
+                <div>{{ 'name' | translate | titlecase }}</div>
                 <div>{{ account.firstName }}</div>
             </div>
             <mat-divider class="divider"></mat-divider>
             <div class="row">
-                <div>Last Name</div>
+                <div>{{ 'last name' | translate | titlecase }}</div>
                 <div>{{ account.lastName }}</div>
             </div>
             <mat-divider class="divider"></mat-divider>
             <div class="row">
-                <div>Email</div>
+                <div>{{ 'email' | translate | titlecase }}</div>
                 <div>{{ account.email }}</div>
             </div>
             <mat-divider class="divider"></mat-divider>
             <div class="row">
-                <div>Counrty</div>
+                <div>{{ 'country' | translate | titlecase }}</div>
                 <div>{{ account.country }}</div>
             </div>
             <mat-divider class="divider"></mat-divider>
             <div class="row">
-                <div>City</div>
+                <div>{{ 'city' | translate | titlecase }}</div>
                 <div>{{ account.city }}</div>
             </div>
             <mat-divider class="divider"></mat-divider>
             <div class="row">
-                <div>Address</div>
+                <div>{{ 'address' | translate | titlecase }}</div>
                 <div>{{ account.address }}</div>
             </div>
             <mat-divider class="divider"></mat-divider>
             <div class="row">
-                <div>Phone</div>
+                <div>{{ 'phone' | translate | titlecase }}</div>
                 <div>{{ account.phoneNumber }}</div>
             </div>
             <mat-divider class="divider"></mat-divider>
             <div class="row">
-                <div>Birth</div>
+                <div>{{ 'birth' | translate | titlecase }}</div>
                 <div>{{ account.birth }}</div>
             </div>
             <mat-divider class="divider"></mat-divider>
             <div class="row">
-                <div>Restaurant</div>
+                <div>{{ 'restaurant' | translate | titlecase }}</div>
                 <div>{{ account.restaurant }}</div>
             </div>
         </div>
 
         <div class="description-wrapper">
-            <h1>Description</h1>
+            <h1>{{ 'description' | translate | titlecase }}</h1>
             <div>{{ account.description }}</div>
         </div>
     </div>
