--- a/clients/owner-client/src/app/employee/_layouts/account/account-edit/account-edit.component.html
+++ b/clients/owner-client/src/app/employee/_layouts/account/account-edit/account-edit.component.html
@@ -2,23 +2,23 @@
   <form class="form-wrapper" [formGroup]="editAccountForm">
     <div class="left-side">
       <mat-form-field appearance="outline" class="max-width">
-        <mat-label>Username</mat-label>
+        <mat-label>{{ 'username' | translate | titlecase }}</mat-label>
         <input matInput formControlName="username" />
       </mat-form-field>
 
       <div class="two-col">
         <mat-form-field appearance="outline" class="max-width">
-          <mat-label>First Name</mat-label>
+          <mat-label>{{ 'name' | translate | titlecase }}</mat-label>
           <input matInput formControlName="firstName" />
         </mat-form-field>
         <mat-form-field appearance="outline" class="max-width">
-          <mat-label>Last Name</mat-label>
+          <mat-label>{{ 'last name' | translate | titlecase }}</mat-label>
           <input matInput formControlName="lastName" />
         </mat-form-field>
       </div>
 
       <mat-form-field appearance="outline" class="max-width">
-        <mat-label>Select Country</mat-label>
+        <mat-label>{{ 'select country' | translate | titlecase }}</mat-label>
         <mat-select formControlName="countryId">
           <mat-option
             *ngFor="let country of account.allCountries"
@@ -31,36 +31,36 @@
 
       <div class="two-col">
         <mat-form-field appearance="outline" class="max-width">
-          <mat-label>City</mat-label>
+          <mat-label>{{ 'city' | translate | titlecase }}</mat-label>
           <input matInput formControlName="city" />
         </mat-form-field>
         <mat-form-field appearance="outline" class="max-width">
-          <mat-label>Address</mat-label>
+          <mat-label>{{ 'address' | translate | titlecase }}</mat-label>
           <input matInput formControlName="address" />
         </mat-form-field>
       </div>
 
       <mat-form-field appearance="outline" class="max-width">
-        <mat-label>Email</mat-label>
+        <mat-label>{{ 'email' | translate | titlecase }}</mat-label>
         <input matInput formControlName="email" />
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="max-width">
-        <mat-label>Phone Number</mat-label>
+        <mat-label>{{ 'phone' | translate | titlecase }}</mat-label>
         <input matInput formControlName="phoneNumber" />
       </mat-form-field>
     </div>
 
     <div class="right-side">
       <mat-form-field appearance="outline" class="max-width">
-        <mat-label>Description</mat-label>
+        <mat-label>{{ 'description' | translate | titlecase }}</mat-label>
         <textarea rows="12" matInput formControlName="description"></textarea>
       </mat-form-field>
 
       <div class="two-col">
         <button type="button" color="accent" mat-raised-button class="max-width" (click)="profileBtn.click()">
           <mat-icon>image</mat-icon>
-          Upload Profile Image
+          {{ 'upload profile image' | translate | titlecase }}
         </button>
         <button 
           type="button" 
@@ -71,7 +71,7 @@
           [disabled]="!profileImageForm.has('image')"
         >
           <mat-icon>save</mat-icon>
-          Save Image
+          {{ 'submit image' | translate | titlecase }}
         </button>
       </div>
 
@@ -91,7 +91,7 @@
         color="primary"
         [disabled]="editAccountForm.invalid || !editAccountForm.dirty"
       >
-        Save
+        {{ 'save' | translate | titlecase }}
       </button>
     </div>
   </form>
