--- a/clients/owner-client/src/app/employee/_layouts/menus/edit-menu/edit-menu.component.html
+++ b/clients/owner-client/src/app/employee/_layouts/menus/edit-menu/edit-menu.component.html
@@ -1,18 +1,18 @@
 <div class="main-wrapper" *ngIf="menuForm">
     <form class="form-wrapper" [formGroup]="menuForm" (ngSubmit)="onSubmit()">
       <mat-form-field appearance="outline">
-        <mat-label>Name</mat-label>
+        <mat-label>{{ 'name' | translate }}</mat-label>
         <input matInput formControlName="name" />
       </mat-form-field>
   
       <mat-form-field appearance="outline">
-        <mat-label>Description</mat-label>
+        <mat-label>{{ 'description' | translate }}</mat-label>
         <textarea rows="5" matInput formControlName="description"></textarea>
       </mat-form-field>
   
       <div class="two-col">
         <mat-slide-toggle color="primary" formControlName="isActive"
-          >Is Active</mat-slide-toggle
+          >{{ 'actove' | translate | titlecase }}</mat-slide-toggle
         >
         <button
           type="submit"
@@ -20,7 +20,7 @@
           color="primary"
           [disabled]="menuForm.invalid || !menuForm.dirty"
         >
-          Update
+          {{ 'update' | translate | titlecase }}
         </button>
       </div>
     </form>
