Can activate account on mobile

--- a/clients/owner-client/src/app/_components/menu-item-card/menu-item-card.component.html
+++ b/clients/owner-client/src/app/_components/menu-item-card/menu-item-card.component.html
@@ -48,7 +48,7 @@
     </div>
   </mat-card-header>
   <mat-card-content>
-    <div class="description-wrapper">
+    <div class="description-wrapper" *ngIf="menuItem.description">
       <p>
         {{
           menuItem.description.length > 150
