--- a/clients/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/top-nav-buttons.component.html
+++ b/clients/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/top-nav-buttons.component.html
@@ -2,9 +2,7 @@
   <app-language-btn></app-language-btn>
   <app-message-btn></app-message-btn>
   <app-notification-btn></app-notification-btn>
-  <app-account-btn
-    (logout)="onLogOut()"
-  ></app-account-btn>
+  <app-account-btn (logout)="onLogOut()"></app-account-btn>
 </div>
 
 <div class="ss-wrapper">
@@ -15,15 +13,25 @@
 
 <mat-menu #menu="matMenu">
   <div class="menu-wrapper">
-    <button type="button" mat-icon-button color="primary" routerLink="{{ role === 'owner' ? '/account' : '/employee/account-details'}}">
+    <button
+      type="button"
+      mat-icon-button
+      color="primary"
+      routerLink="{{
+        role === 'owner' ? '/account' : '/employee/account-details'
+      }}"
+    >
       <mat-icon>account_circle</mat-icon>
     </button>
     <button
       type="button"
       mat-icon-button
       color="primary"
-      routerLink="/chats"
+      (click)="selectLanguage()"
     >
+      <mat-icon>language</mat-icon>
+    </button>
+    <button type="button" mat-icon-button color="primary" routerLink="/chats">
       <mat-icon>chat</mat-icon>
     </button>
     <button
