--- a/clients/customer-client/src/app/layouts/selection/selection.component.html
+++ b/clients/customer-client/src/app/layouts/selection/selection.component.html
@@ -1,8 +1,8 @@
 <mat-tab-group>
-    <mat-tab label="Menu Items">
+    <mat-tab label="{{ 'menu items' | translate | titlecase }}">
         <app-menu-items></app-menu-items>
     </mat-tab>
-    <mat-tab label="Menus">
+    <mat-tab label="{{ 'menus' | translate | titlecase }}">
         <app-menus></app-menus>
     </mat-tab>
 </mat-tab-group>
