--- a/clients/customer-client/src/app/components/menu-card/menu-card.component.html
+++ b/clients/customer-client/src/app/components/menu-card/menu-card.component.html
@@ -4,7 +4,7 @@
         <div class="description">
             {{ menu.description }}
         </div>
-        <button (click)="onViewMore()" class="btn" type="button" mat-raised-button>View More</button>
+        <button (click)="onViewMore()" class="btn" type="button" mat-raised-button>{{ 'view more' | translate | titlecase }}</button>
         <div class="footer">
             <div class="menu-items">
                 <div>{{ menu.menuItemNumber }}</div>
