--- a/clients/customer-client/src/app/components/menu-item-card/menu-item-card.component.css
+++ b/clients/customer-client/src/app/components/menu-item-card/menu-item-card.component.css
@@ -1,6 +1,10 @@
 .main-wrapper {
-    width: 100%;
+    width: 30rem;
     padding: 0.5rem;
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background-color: #2d3e3e;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -54,4 +58,10 @@
 .img-wrapper > img {
     width: 100%;
     height: 100%;
+}
+
+@media (max-width: 960px) {
+    .main-wrapper {
+        width: 100%;
+    }
 }
