Can download restaurant table qr codes

--- a/clients/owner-client/src/app/_layouts/tables/tables-qr-code/table-qr-code/table-qr-code.component.html
+++ b/clients/owner-client/src/app/_layouts/tables/tables-qr-code/table-qr-code/table-qr-code.component.html
@@ -1,6 +1,11 @@
 <ng-container *ngIf="table">
-    <div class="main-wrapper">
-        <h1 class="name">{{ table.name }}</h1>
-        <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-    </div>
+  <div class="main-wrapper">
+    <h1 class="name">{{ table.name }}</h1>
+    <qrcode
+      [qrdata]="table.url"
+      [width]="256"
+      [errorCorrectionLevel]="'M'"
+      imageSrc="assets/img/logo-160x160.png"
+    ></qrcode>
+  </div>
 </ng-container>
