--- a/clients/owner-client/src/app/_layouts/tables/tables-qr-code/tables-qr-code.component.css
+++ b/clients/owner-client/src/app/_layouts/tables/tables-qr-code/tables-qr-code.component.css
@@ -1,3 +1,10 @@
+.main-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
 .paper-wrapper {
     display: flex;
     flex-wrap: wrap;
