--- a/clients/owner-client/src/app/_layouts/tables/tables-qr-code/tables-qr-code.component.html
+++ b/clients/owner-client/src/app/_layouts/tables/tables-qr-code/tables-qr-code.component.html
@@ -1,25 +1,15 @@
 
-<button (click)="onDownload()">Download</button>
+<button mat-raised-button color="accent" (click)="onDownload()">
+    <mat-icon>download</mat-icon>
+    Download
+</button>
 
-
-<!-- <app-pdf-wrapper [name]="'restaurant-tables'">
-    <div class="qr-wrapper">
-        <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-        <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-        <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-        <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-        <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-        <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-    </div>
-</app-pdf-wrapper> -->
-
-
-
-<app-pdf-wrapper>
-    <div class="paper-wrapper">
-        <app-table-qr-code></app-table-qr-code>
-        <app-table-qr-code></app-table-qr-code>
-        <app-table-qr-code></app-table-qr-code>
-        <app-table-qr-code></app-table-qr-code>
-    </div>
-</app-pdf-wrapper>
+<div class="main-wrapper">
+    <app-pdf-wrapper *ngFor="let paper of tables">
+        <div class="paper-wrapper">
+            <ng-container *ngFor="let table of paper">
+                <app-table-qr-code [table]="table"></app-table-qr-code>
+            </ng-container>
+        </div>
+    </app-pdf-wrapper>
+</div>
